<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motion_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/splash_scene"
    android:background="@drawable/bg_splash_gradient">

    <View
        android:id="@+id/pulse_ring"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:background="@drawable/bg_pulse_ring" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/cd_app_logo" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_tagline"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray" />
</androidx.constraintlayout.motion.widget.MotionLayout>
